# prototapi

./: .pre-commit-config.yml  README.md  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml
docker/: Dockerfile
docs/: index.md
docs/API_Reference/Python/: index.md
integration/scripts/: docker-compose.yml
src/prototapi/: __init__.py
src/prototapi/api/: _constants.py  main.py
src/prototapi/api/utils/: dynamic_discrimination.py
src/prototapi/api/v1/: _routes.py
src/prototapi/api/v1/endpoints/: location.py
src/prototapi/api/v1/schemas/: location.py
tests/: __init__.py  test_base.py
tests/test_utils/: test_dynamic_discrimination.py
